--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
       <h2>I'm an talented Web Developer</h2>
       <hr /> 
       <h3>
-       <a href="/public/movie-ranking-project.html">Favourite Movies Project</a>
+       <a href="./public/movie-ranking-project.html">Favourite Movies Project</a>
       </h3>
        <a href="./public/movie-ranking-project.html">
-        <img src="./assets/images/Movie-Project.png" title="My Favourut Movies" height="200" width="200" /></a>
+        <img src="./assets/images/Movie-Project.png" title="My Favourut Movies" width="200" /></a>
       <h3>  
        <a href="./public/birthday-project.html">Birthday Project</a>
       </h3> 
        <a href="./public/birthday-project.html">
-        <img src="./assets/images/Birthday-Project.png" title="Birthday Cake Project" height="200" width="200" /></a>
+        <img src="./assets/images/Birthday-Project.png" title="Birthday Cake Project" width="200" /></a>
       <hr />
        <p>
         <a href="./public/about.html">About Me</a> 
